src/test/ui/structs/struct-missing-comma.stderr
error: expected `,`, or `}`, found `bar`
  --> $DIR/struct-missing-comma.rs:6:13
   |
LL |     foo: u32 //~ expected `,`, or `}`, found `bar`
   |             ^ help: try adding a comma: `,`

error: aborting due to previous error

